TAG: qcreports_db-5-1-9-3
DATE: 10/15/2014
STAFF: lec
CHANGES: 
1) mgd/RECOMB_Images.py : fix

TAG: qcreports_db-5-1-9-2
DATE: 10/1/2014
STAFF: dbm
CHANGES: TR11652
1) weekly/MGI_EGNomenUpdate.sql - New
2) qcr.html - Added link to MGI_EGNomenUpdate.sql.rpt in nomen section

TAG: qcreports_db-5-1-9-1
DATE: 09/29/2014
STAFF: lec
CHANGES:
a) TR11652/converting HMD tables to MRK_Cluster
b) MRK_NomenRat.sql should have been archived earlier (qcreports_db-4-4-0-19)
c) removing PRB_Allele_Strain calls (see TR11789)

TAG: qcreports_db-5-1-8-14
TAG: qcreports_db-5-1-8-13
DATE: 08/05/2014
STAFF: lec
CHANGES:
a) TR11745/mgd/GO_stats.py/add 'GO Central' to the GO_CLAUSE
b) TR11708/weekly/GXD_EMAPA_Terms.py : remove secondary ids 

TAG: qcreports_db-5-1-8-12
DATE: 07/17/2014
STAFF: lec
CHANGES:
a) TR11544/weekly/ALL_MolNotesNoMP.py : add J:204812 to excluded list
b) TR11708/weekly/GXD_EMAPS_Terms.py : remove secondary ids 

TAG: qcreports_db-5-1-8-11
DATE: 06/18/2014
STAFF: lnh
CHANGES: TR 11687/ALL_Progress.py
added date to report file name

TAG: qcreports_db-5-1-8-10
DATE: 05/15/2014
STAFF: lec
CHANGES: 
mgd/PRB_StrainByDate.sql: fix bug

TAG: qcreports_db-5-1-8-9
DATE: 04/30/2014
STAFF: lec
CHANGES: 
a) TR11667/monthly/ALL_RefCounts.py

TAG: qcreports_db-5-1-8-8
DATE: 04/18/2014
STAFF: lnh
CHANGES: TR11332
Added a new qc repport - mgd/GO_EvidenceProperty.py
A report that inspects J:73065 GO annotations 

TAG: qcreports_db-5-1-8-7
DATE: 04/15/2014
STAFF: lec
CHANGES: TR 11361/ALL_Progress.py

TAG: qcreports_db-5-1-8-6
TAG: qcreports_db-5-1-8-5
DATE: 04/09/2014
STAFF: lec
CHANGES: TR11253/jan2014 and apr2014
mgd/PRB_StrainByDate.sql: add 'mberry'/12/09/2013 to exclusion list

**accidentally wrote "5" instead of "3"...and then had to retag to make sure
that the HISTORY file agreed with the tag

TAG: qcreports_db-5-1-8-2
DATE: 03/19/2014
STAFF: lec
CHANGES: 
a) TR11544/weekly/ALL_MolNotesNoMP.py : add J:204739 to excluded list
b) TR11597/mgd/GXD_SpecTheilerAge